<resources>
    <string name="app_name">La Piragua</string>
    <string name="description">descripcion</string>
    <string name="title_activity_splash">splashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="tiposP">
        <item>Patrimonio inmaterial</item>
        <item>Patrimonio material</item>
    </string-array>

    <string name="hint_resource">Tipo de patrimonio</string>


    <string name="title_home">Home</string>
    <string name="title_registrar">Registrar</string>
    <string name="title_buscar">buscar</string>
    <string name="title_qr">Escanear</string>
    <string name="title_usuario">Usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_borrar">MainActivityBorrar</string>


</resources>