<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_registrar"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/title_registrar" />

    <item
        android:id="@+id/navigation_buscar"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_buscar" />
    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_baseline_qr_code_24"
        android:title="@string/title_qr" />
    <item
        android:id="@+id/navigation_usuario"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_usuario" />

</menu>